# rf-metric

./: .env  .gitattributes  .pre-commit-config.yaml  README.md  maskfile.md  pyproject.toml  sample.env
notebooks/: eda.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb
src/rf_metric/: __init__.py  utils.py
src/rf_metric/data/: __init__.py
tests/: env_test.py  sample_test.py
