[project]
name = "rf-metric"
version = "0.1.0"
description = "A new distance metric for Radio Frequency (RF) signals."
readme = "README.md"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "h5py>=3.14.0",
    "numpy>=2.3.1",
]

[project.scripts]
rf-metric = "rf_metric:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "h5py-stubs",
    "ipympl>=0.9.7",
    "isort>=6.0.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.12.2",
]

[tool.uv.sources]
h5py-stubs = { git = "https://github.com/nishaq503/h5py-stubs" }
